feat: add map component

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <title>Föli aikataulut</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQE814HKo-vS4iRM3XIyC5OeVRbAqETQA"></script>
   </head>
   <body>
     <noscript>
